# QRCode-Barcode-Detector

./: .gitignore  Basics.py  Project.py  QrBarTest.py  QrCodeProject.py  README.md  myDataFile.text  pyproject.toml  requirements.txt
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat  read_zbar.py
data/: authorized_codes.txt
src/qr_barcode_detector/: __init__.py  authorization.py  scanner.py
